--- a/src/static/index.html
+++ b/src/static/index.html
@@ -40,6 +40,7 @@ Project URL: https://github.com/oimasterkafuu/chat
         header {
             background-color: #86d7ff;
             color: white;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.2);
             padding: 10px 20px;
             display: flex;
             align-items: center;
@@ -84,6 +85,7 @@ Project URL: https://github.com/oimasterkafuu/chat
             word-wrap: break-word;
             animation: fadeInFloat 0.5s cubic-bezier(0.17, 0.67, 0.78, 0.99);
             position: relative;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         .message.sent {
             background-color: #6dcb83;
