--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,26 +1,3 @@
-<!--
-Chat - A simple chat application.
-Copyright (C) 2024 oimaster
-
-This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU Affero General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-GNU Affero General Public License for more details.
-
-You should have received a copy of the GNU Affero General Public License
-along with this program. If not, see <https://www.gnu.org/licenses/>.
-
-Contact Information:
-Email: oimasterfake@icloud.com
-
-Project URL: https://github.com/oimasterkafuu/chat
--->
-
 <!doctype html>
 <html>
     <head>
@@ -88,21 +65,25 @@ Project URL: https://github.com/oimasterkafuu/chat
                 opacity: 0.5;
                 cursor: not-allowed;
             }
-            .message {
-                padding: 10px;
-                margin: 5px 0;
-                border-radius: 20px;
-                max-width: 70%;
+            .message-container {
+                display: flex;
+                flex-direction: column;
                 word-wrap: break-word;
                 animation: fadeInFloat 0.5s cubic-bezier(0.17, 0.67, 0.78, 0.99);
                 position: relative;
+            }
+            .message {
+                max-width: 70%;
+                padding: 10px;
+                margin: 5px 0;
+                border-radius: 20px;
                 box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             }
             .message.sent {
                 background-color: #6dcb83;
                 color: white;
                 margin-left: auto;
-                text-align: right;
+                /* text-align: right; */
                 align-self: flex-end;
                 border-bottom-right-radius: 0;
             }
@@ -113,7 +94,19 @@ Project URL: https://github.com/oimasterkafuu/chat
                 align-self: flex-start;
                 border-bottom-left-radius: 0;
             }
-            /* Refactored animations */
+            .timestamp {
+                font-size: 10px;
+                color: #777;
+                margin-bottom: 5px;
+            }
+            .timestamp.sent {
+                align-self: flex-end;
+                text-align: right;
+            }
+            .timestamp.received {
+                align-self: flex-start;
+                text-align: left;
+            }
             @keyframes fadeInFloat {
                 0% {
                     opacity: 0;
@@ -167,17 +160,38 @@ Project URL: https://github.com/oimasterkafuu/chat
                 input.removeAttribute('disabled');
             });
 
-            function appendMessage(content, className) {
+            function formatTime(timestamp) {
+                const date = new Date(timestamp);
+                // const year = date.getFullYear();
+                const month = (date.getMonth() + 1).toString().padStart(2, '0');
+                const day = date.getDate().toString().padStart(2, '0');
+                const hours = date.getHours().toString().padStart(2, '0');
+                const minutes = date.getMinutes().toString().padStart(2, '0');
+                const seconds = date.getSeconds().toString().padStart(2, '0');
+                return `${month}-${day} ${hours}:${minutes}:${seconds}`;
+            }
+
+            function appendMessage(content, className, timestamp) {
+                const container = document.createElement('div');
+                container.className = 'message-container';
+
+                const time = document.createElement('div');
+                time.className = `timestamp ${className}`;
+                time.innerText = formatTime(timestamp);
+
                 const message = document.createElement('div');
                 message.className = `message ${className}`;
                 message.innerText = content;
-                chat.appendChild(message);
+
+                container.appendChild(message);
+                container.appendChild(time);
+                chat.appendChild(container);
                 chat.scrollTop = chat.scrollHeight; // 自动滚动到最底部
             }
 
             function showMessages() {
                 db.messages.orderBy('timestamp').each((message) => {
-                    appendMessage(message.content, message.is_mine ? 'sent' : 'received');
+                    appendMessage(message.content, message.is_mine ? 'sent' : 'received', message.timestamp);
                 });
             }
 
@@ -199,7 +213,7 @@ Project URL: https://github.com/oimasterkafuu/chat
             });
 
             function handleTextMessage(data) {
-                appendMessage(data.content, 'received', false);
+                appendMessage(data.content, 'received', Date.now());
             }
 
             input.addEventListener('keydown', async (event) => {
@@ -219,7 +233,7 @@ Project URL: https://github.com/oimasterkafuu/chat
                         socket.emit('msg', encryptedMessage);
 
                         // 添加到聊天窗口
-                        appendMessage(message, 'sent', true);
+                        appendMessage(message, 'sent', Date.now());
                         await db.messages.add({
                             content: message,
                             timestamp: Date.now(),
